[package]
name = "weekend-raytracer-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
hw-skymodel = "0.1.1"
image = "0.24.6"
imgui = "0.11.0"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs/", rev = "233eb3f" }
imgui-winit-support = "0.11.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
pollster = "0.3.0"
thiserror = "1.0.40"
wgpu = "0.16.0"
winit = "0.27.0"
